--- a/roles/workshop-playbook/tasks/main.yml
+++ b/roles/workshop-playbook/tasks/main.yml
@@ -1,2 +1,8 @@
 - name: "Task 1: Gather facts"
   import_tasks: gather-facts.yml 
+
+- name: "Task 2: Set login banner"
+  import_tasks: login-banner.yml 
+
+- name: "Task 3: Configure SNMP"
+  import_tasks: configure-snmp.yml 
