Commit Message Here

--- a/roles/workshop-playbook/tasks/configure-snmp.yml
+++ b/roles/workshop-playbook/tasks/configure-snmp.yml
@@ -1,5 +1,5 @@
-name: configure SNMP
-cisco.ios.ios_snmp_server:
+- name: configure 
+  cisco.ios.ios_snmp_server:
   state: merged
   config:
     location: "Datacenter-1"
